[package]
name = "learn"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

time = "0.3"

actix-web = "4"
rand = "0.8.5"
serde = {version = "1.0", features=["derive"]}

num = "0.4.1"
image = "0.24.7"
crossbeam = "0.8.2"

